# wagtail-draftail-snippet

./: .travis.yml  CHANGELOG.md  pyproject.toml  pytest.ini  setup.py
tests/: fixtures.py  test_settings.py  urls.py
tests/testapp/: factories.py  models.py
wagtail_draftail_snippet/: richtext.py  wagtail_hooks.py
wagtail_draftail_snippet/static/wagtail_draftail_snippet/js/: wagtail-draftail-snippet.js
