[tool.poetry]
name = "wagtail-draftail-snippet"
version = "1.0.0"
description = "Associate RichTextBlock text content to a snippet model."
authors = ["Parbhat Puri <me@parbhatpuri.com>", "Adam Hill <ahill@fool.com>", "Brady Moe <bmoe872@gmail.com>"]
repository = "https://github.com/themotleyfool/wagtail-draftail-snippet"
readme = "README.md"
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.8"
wagtail = ">=4.0, <7.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-django = "^4"
wagtail-factories = "^4"
flake8 = "^5"
black = "^23"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
